--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p class="signature">Love, jamjam</p>
       </div>
       <div class="scratch-box">
-        <img id="hiddenImage" src="IMG_8889.jpg" alt="Surprise Photo" />
+        <img id="hiddenImage" src="IMG_8889.JPG" alt="Surprise Photo" />
         <canvas id="scratchCanvas"></canvas>
       </div>
     </div>
